Commit: Servicio de funcionario y controller, correcciones en controller y service de rol, implementacion de mappers